# dragonFly

./: .flake8  .gitignore  README.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  runTest.py  runTrajectory.py  run_pytest.py  test_ABC.py  test_list.ipynb  test_outils.ipynb  test_rich_logging.py  test_toto.py  toto.py
.github/workflows/: main.yml
OLD/: old_codeConformance.py  test_basicRotation.py  test_inputCheckers.py
dragonfly/: __init__.py  constant.py  dev.py  geography.py  gravity.py  utils.py
dragonfly/OLD/: dev.py  utils.py
dragonfly/constant/: __constant.py  __init__.py
dragonfly/constants/: __constant.py  __earthModel.py
dragonfly/geography/: __init__.py  __position.py  __range.py  __rotationMatrix.py
dragonfly/utils/: __init__.py  __myClass.py
dragonfly/utils/exception/: __init__.py
dragonfly/utils/fileIO/: __list.py
dragonfly/utils/math/: __init__.py  __rotationMatrix.py
evaluation/: eval_RK4.ipynb  eval_html.ipynb  eval_metricTools.ipynb  linearAlgebra.ipynb  students_results.html
evaluation/templates/: message2.txt
tests/: test_EarthModel.py  test_Position.py  test_basicRotation.py  test_distance.py  test_fileValidation.py  test_geographicRotations.py  test_gravity.py  test_inputCheckers.py  test_sandbox.py  test_skewMatrix.py  test_validationLetter.py  test_validationTools.py
tests/constants/: test_EarthModel.py  test_defaultValue.py  test_visual.py
tests/geography/: test_Position.py  test_geographicRotations.py
tests/utils/: __init__.py
toto/: __init__.py
toto/utils/: __init__.py  titi.py
(+11 files in other folders)
