[tool.poetry]
name = "dragonfly"
version = "0.1.0"
description = "tools used for trajectory anaylisis and simulation"
authors = ["Antoine Barre <antoine.barre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scipy = "^1.10.1"
numpy = "^1.24.3"
pytest = "^7.3.1"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
